lib/tests/fixtures/compiler/evaluation/inline_epp_bad_parse.pp
inline_epp(@(TEMPLATE))
  <%- whoops %->
  |- TEMPLATE
